# purobot

./: .env.example  .gitignore  DESIGN_DOC.md  LICENSE.md  README.md  main.py  pyproject.toml
commands/: alliteration-recipe.md
demo/beh_store/: app.js  catalog.js  index.html  styles.css
purobot/: __init__.py  app.py  cli.py  config.py
purobot/channels/: __init__.py  console.py  telegram.py  whatsapp.py
purobot/commands/: __init__.py  loader.py
purobot/core/: agent.py  model.py  session.py
purobot/skills/: __init__.py  loader.py
purobot/tools/: base.py  browser.py
skills/operator_mode/: SKILL.md
