[project]
name = "purobot"
version = "0.1.0"
description = "Minimal Python agent framework for a meetup demo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0.0",
    "playwright>=1.52.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
purobot = "purobot.cli:main"
